# zeitr

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: cargo.yaml  release.yaml
src/: calc.rs  cli.rs  gui.rs  main.rs  util.rs
