[package]
name = "zeitr"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Small application to calculate with time and time spans "
readme = "README.md"
homepage = "https://github.com/PlexSheep/zeitr"
repository = "https://github.com/PlexSheep/zeitr"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
exmex = { version = "0.20.4", optional = true, features = ["serde", "value"] }

[features]
default = ["calc"]
calc = ["dep:exmex"]
