[package]
name = "zeitr"
version = "0.1.0"
edition = "2024"
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "A lightweight time calculation utility for tracking work hours and performing time arithmetic"
readme = "README.md"
homepage = "https://github.com/PlexSheep/zeitr"
repository = "https://github.com/PlexSheep/zeitr"
keywords = ["time", "calculator", "productivity", "cli", "utility"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
exmex = { version = "0.20.4", optional = true, features = ["serde", "value"] }

[features]
default = ["calc"]
calc = ["dep:exmex"]

[[bin]]
name = "zeitr"
path = "src/main.rs"
